--- a/src/scss/framework/media.scss
+++ b/src/scss/framework/media.scss
@@ -7,9 +7,9 @@
 }
 
 .show-desktop {
-    display: unset;
+    display: unset !important;
 
     @media screen and(max-width: 768px) {
-        display: none;
+        display: none !important;
     }
 }
