--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -1,5 +1,8 @@
 @import './homePage.scss';
 @import './stepPage.scss';
-@import './cardPage.scss';
+@import './cartPage.scss';
 @import './checkoutPage.scss';
 @import './thanks.scss';
+@import './chooseFormPage.scss';
+@import './chooseSizePage.scss';
+@import './choosePackage.scss';
