--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -84,6 +84,9 @@
 }
 
 .btn-burger {
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
     background-color: transparent;
     border: none;   
 
