--- a/src/scss/components/navigation-menu.scss
+++ b/src/scss/components/navigation-menu.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100vh;
     background-color: #fff;
-    z-index: 2;
+    // z-index: 2;
     transition: ease-in-out 1s;
     opacity: 0;
     
@@ -68,7 +68,7 @@
         display: block;
 
         @media screen and(max-width: 768px) {
-            position: fixed;
+            position: absolute;
             left: 16px;
             right: 16px;
             bottom: 20px;
