--- a/src/scss/components/select.scss
+++ b/src/scss/components/select.scss
@@ -17,7 +17,7 @@
 
 }
 
-.custom-select,
+// .custom-select,
 .custom-select--card {
     @media screen and(max-width: 768px) {
         display: none;
