--- a/src/scss/framework/base.scss
+++ b/src/scss/framework/base.scss
@@ -4,15 +4,18 @@
 
 body, html {
     cursor: none;
-    height: 100%;
+    // height: 100%;
 }
 
 body {
     position: relative;
     font-family: 'Open Sans', sans-serif;
 
+
     @media screen and(max-width: 768px) {
         // overflow: hidden;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
     }
 }
 
