--- a/src/scss/sections/footer.scss
+++ b/src/scss/sections/footer.scss
@@ -69,6 +69,7 @@
 .product-preview__controls {
     padding: 8px 16px 20px;
     width: 100%;
+    z-index: 4;
 }
 
 @media screen and(min-width: 1441px) {
