--- a/src/scss/sections/product-preview.scss
+++ b/src/scss/sections/product-preview.scss
@@ -35,7 +35,7 @@
         }
 
         @media screen and (max-width: 768px) {
-            padding-top: 12px;
+            // padding-top: 12px;
             padding-bottom: 12px;
             height: unset;
             overflow: visible;
@@ -52,7 +52,7 @@
                     position: fixed;
                     top: -70px;
                     width: 100vw;
-                    height: 100vh;
+                    height: 90vh;
                     z-index: 3;
                     object-fit: cover;
                     object-position: center;
@@ -83,6 +83,7 @@
     }
 
     .order-preview__summary {
+        margin-top: 20px;
         max-width: 400px;
         width: 100%;
 
@@ -102,6 +103,10 @@
                 margin-right: 16px;
                 margin-left: 16px;
                 border-bottom: 1px solid $colorBrownLighten;
+            }
+
+            .item__total {
+                font-size: 14px;
             }
         }
     }
@@ -133,10 +138,3 @@
     }
 }
 
-.card--details {
-    display: block;
-    padding: 20px;
-    height: 200px;
-    width: 100%;
-    border: 1px solid black;
-}
