debug almost complete, commit before preview

--- a/src/scss/pages/cartPage.scss
+++ b/src/scss/pages/cartPage.scss
@@ -410,6 +410,7 @@
         padding: 15px 0 12px;
         display: flex;
         width: 100%;
+        min-height: 125px;
         height: 125px;
         border-bottom: 1px solid $colorBrownLighten;
 
