--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -80,7 +80,8 @@
         margin-right: 14px;
 
         svg {
-            max-width: 145px;
+            max-width: 140px;
+            // max-width: 120px;
         }
     }
 }
