--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -77,8 +77,9 @@
 .btn-icon {
     display: grid;
     place-items: center;
-    width: 32px;
-    height: 32px;
+    padding-right: 0;
+    width: 38px;
+    height: 36px;
     background-color: transparent;
     border: none;
 }
