--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -15,6 +15,15 @@
         .flex-container {
             justify-content: unset;
         }
+
+        .btn-group {
+            margin-left: auto;
+
+            svg {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     &.header-in-features {
@@ -82,6 +91,12 @@
         svg {
             max-width: 140px;
             // max-width: 120px;
+        }
+    }
+
+    @media screen and(max-width: 361px) {
+        svg {
+            max-width: 120px;
         }
     }
 }
