--- a/src/scss/sections/product-preview.scss
+++ b/src/scss/sections/product-preview.scss
@@ -72,7 +72,7 @@
                 border-radius: 50%;
                 
                 img {
-                    width: 12px;
+                    width: 15px;
                     height: 12px;
                     top: 50%;
                     left: 50%;
@@ -125,6 +125,18 @@
     
                 .label {
                     margin-right: 8px;
+                }
+            }
+
+            @media screen and(max-width: 768px) {
+                align-items: center;
+
+                .item-title{
+                    font-size: 14px;
+        
+                    .label {
+                        font-size: 12px;
+                    }
                 }
             }
         }
