--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -10,3 +10,8 @@
 @import './product-tips.scss';
 @import './select.scss';
 @import './slider.scss';
+@import './section.scss';
+
+
+/* Blog */
+@import './blog.scss';
