--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,3 +2,7 @@
 @import './components/index.scss';
 @import './pages/index.scss';
 @import './sections/index.scss';
+
+
+/* Shop */
+@import './shop/main.scss';
