add votre home-page in progress

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -54,6 +54,14 @@
     height: 32px;
 }
 
+.btn-md {
+    padding: 11px;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 19px;
+}
+
 .btn-lg {
     padding: 21px;
     width: 100%;
