--- a/src/scss/framework/media.scss
+++ b/src/scss/framework/media.scss
@@ -13,3 +13,11 @@
         display: none !important;
     }
 }
+
+.show-desktop-block {
+    display: block;
+
+    @media screen and(max-width: 768px) {
+        display: none !important;
+    }
+}
