--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -11,7 +11,7 @@
 @import './select.scss';
 @import './slider.scss';
 @import './section.scss';
-
+@import './cards.scss';
 
 /* Blog */
 @import './blog.scss';
