--- a/src/scss/pages/cartPage.scss
+++ b/src/scss/pages/cartPage.scss
@@ -391,20 +391,7 @@
     }
 
     
-    .card__like {
-        position: absolute;
-        top: 12px;
-        right: 12px;
-        display: grid;
-        place-items: center;
-        width: 32px;
-        height: 32px;
-
-        svg {
-            width: 20px;
-            height: 20px;
-        }
-    }
+    
 
     @media screen and(max-width: 768px) {
         padding: 15px 0 12px;
@@ -446,12 +433,6 @@
             font-weight: 600;
         }
 
-        .card__like {
-            right: 0;
-            width: 24px;
-            height: 24px;
-        }
-
         .card__btn-buy {
             position: absolute;
             right: 0;
@@ -463,6 +444,27 @@
         }
 
         
+    }
+}
+
+.card__like {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    display: grid;
+    place-items: center;
+    width: 32px;
+    height: 32px;
+
+    svg {
+        width: 20px;
+        height: 20px;
+    }
+
+    @media screen and(max-width: 768px) {
+        right: 0;
+        width: 24px;
+        height: 24px;
     }
 }
 
