--- a/src/scss/shop/main.scss
+++ b/src/scss/shop/main.scss
@@ -27,6 +27,24 @@
         }
     }
 
+    .grid-sizer {
+        // width: 220px;
+        // height: 324px;
+    
+        @media screen and(max-width: 768px) {
+            // width: 100%;
+            // height: 60px;
+        }
+    }
+    
+    .gutter-sizer {
+        // width: 20px;
+    
+        @media screen and(max-width: 768px) {
+            // width: 4%
+        }
+    }
+
     .line,
     svg path {
         stroke: #000;
