--- a/src/scss/shop/main.scss
+++ b/src/scss/shop/main.scss
@@ -2,6 +2,8 @@
 @import './sections/invite.scss';
 
 @import './pages/HomePage.scss';
+@import './pages/CatalogPage.scss';
+@import './pages/SingleProductPage.scss';
 
 .shop {
 
@@ -24,24 +26,6 @@
                     max-height: 30px;
                 }
             }
-        }
-    }
-
-    .grid-sizer {
-        // width: 220px;
-        // height: 324px;
-    
-        @media screen and(max-width: 768px) {
-            // width: 100%;
-            // height: 60px;
-        }
-    }
-    
-    .gutter-sizer {
-        // width: 20px;
-    
-        @media screen and(max-width: 768px) {
-            // width: 4%
         }
     }
 
