--- a/src/scss/shop/main.scss
+++ b/src/scss/shop/main.scss
@@ -1,5 +1,6 @@
 @import './sections/founder.scss';
 @import './sections/invite.scss';
+@import './sections/catalog-controls.scss';
 
 @import './pages/HomePage.scss';
 @import './pages/CatalogPage.scss';
