--- a/src/scss/components/icons.scss
+++ b/src/scss/components/icons.scss
@@ -37,7 +37,10 @@
 }
 
 .icon-info::before,
-.icon-rating::before {
+.icon-rating::before,
+.icon-arrow::before,
+.icon-filter::before,
+.icon-x::after {
     position: absolute;
     content: '';
     top: 0;
@@ -55,3 +58,36 @@
     background-image: url("data:image/svg+xml,%3Csvg width='16' height='15' viewBox='0 0 16 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7.9987 1.3335L10.0587 5.50683L14.6654 6.18016L11.332 9.42683L12.1187 14.0135L7.9987 11.8468L3.8787 14.0135L4.66536 9.42683L1.33203 6.18016L5.9387 5.50683L7.9987 1.3335Z' fill='%238D6355' stroke='%238D6355' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
 }
 
+.icon-arrow,
+.icon-filter {
+    position: relative;
+    padding-left: 8px;
+    width: 20px;
+    height: 20px;
+}
+
+.icon-arrow::before {
+    top: 40%;
+    left: 40%;
+    background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1.5L6 6.5L11 1.5' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+}
+
+.icon-filter::before {
+    top: 5%;
+    left: 40%;
+    background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cline x1='18.25' y1='5.75' x2='1.75' y2='5.75' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='15.25' y1='10.75' x2='4.75' y2='10.75' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cline x1='13.25' y1='15.75' x2='6.75' y2='15.75' stroke='black' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+}
+
+.icon-x {
+    position: relative;
+    width: 10px;
+    height: 10px;
+}
+
+.icon-x::after {
+    top: 4px;
+    left: 4px;
+    background-image: url("data:image/svg+xml,%3Csvg width='8' height='8' viewBox='0 0 8 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.5 1.5L1.5 6.5M1.5 1.5L6.5 6.5' stroke='white' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.5 1.5L1.5 6.5M1.5 1.5L6.5 6.5' stroke='url(%23paint0_linear)' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cdefs%3E%3ClinearGradient id='paint0_linear' x1='4' y1='1.5' x2='4' y2='6.5' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='white'/%3E%3Cstop offset='1' stop-color='white' stop-opacity='0'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E%0A");
+    background-repeat: no-repeat;
+}
