--- a/src/scss/shop/sections/founder.scss
+++ b/src/scss/shop/sections/founder.scss
@@ -3,6 +3,13 @@
         .container {
             flex-direction: column;
         }
+
+        .section__bg {
+            margin-left: calc(50% - 50vw);
+            margin-right: calc(50% - 50vw);
+            max-width: 1000%;
+            width: auto;
+        }
     }
 }
 
@@ -11,6 +18,19 @@
 
     @media screen and(max-width: 768px) {
         margin-left: 0;
+
+        .btn--show-more {
+            margin-top: 8px;
+            padding-left: 0;
+            display: block;
+            font-size: 12px;
+            line-height: 16px;
+            color: $colorSecondary;
+            background-color:transparent;
+            border: none;
+            text-decoration: underline;
+            
+        }
     }
 }
 
@@ -27,6 +47,8 @@
 
     @media screen and(max-width: 768px) {
         max-width: unset;
+        font-size: 14px;
+        line-height: 150%;
     }
 }
 
@@ -40,4 +62,24 @@
 
 .founder__secondary {
     line-height: 150%;
+
+    @media screen and(max-width: 768px) {
+        // min-height: 0;
+        // max-height: 0;
+        visibility: hidden;
+        max-height: 0;
+        opacity: 0;
+        top: -100%;
+        transition: ease-out .2s;
+
+        &.active {
+            // min-height: 350px;
+            height: 100%;
+            max-height: 200px;
+            opacity: 1;
+            visibility: visible;
+            transition: ease-in .3s;
+        }
+    }
+
 }
