--- a/src/scss/shop/sections/invite.scss
+++ b/src/scss/shop/sections/invite.scss
@@ -1,4 +1,14 @@
 .section-invite {
     text-align: center;
+
+
+    @media screen and(max-width: 768px) {
+        .slide__preview {
+            margin-left: calc(50% - 50vw);
+            margin-right: calc(50% - 50vw);
+            max-width: 1000%;
+            width: auto;
+        }
+    }
 }
 
