--- a/src/scss/components/index.scss
+++ b/src/scss/components/index.scss
@@ -12,6 +12,7 @@
 @import './slider.scss';
 @import './section.scss';
 @import './cards.scss';
+@import './range-slider.scss';
 
 /* Blog */
 @import './blog.scss';
