--- a/src/scss/pages/cartPage.scss
+++ b/src/scss/pages/cartPage.scss
@@ -462,7 +462,7 @@
     }
 
     @media screen and(max-width: 768px) {
-        right: 0;
+        right: 12px;
         width: 24px;
         height: 24px;
     }
